Refactor buildKeepDetailsPrivate to separate refuge and confidentiality data handling